apps/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: zt-auth
  labels:
    app: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - name: http
      port: 4001
      targetPort: 4001
